2006-03-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tclconfig/*:        Updated to TEA 3.5
	* configure:          Regenerated.
	* generic/udp_tcl.c:  Applied patch from bug #1245141 to use
	                      socklen_t type correctly (Tru64 uses a
	                      64bit long for socklen_t)
	* generic/udp_tcl.c:  Included a Udp_SafeInit function. Some versions
	                      of MacOSX are wierd about apps testing for
	                      missing functions in shared libs. (#1439508)

2005-11-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c:  bug #1240127 - handle possible missing IP_TTL
	* generic/udp_tcl.c:  bug #1358181 - fix for NetBSD 2.0
	* aclocal.m4:         bug #1358189 - better method for finding dtplite
	* win/makefile.vc:    Increment version to 1.0.8
	* configure.in:       
	* configure:          regenerated

2005-05-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* TAG:      ==== tcludp-1_0_7 ====
        * RELEASE:  Released version 1.0.7

2005-05-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: Deal with bug #1178996 by changing the code
	used to cleanup sockets under Windows.
	* generic/udp_tcl.c: fconfigure options were returning lists of
	lists. Fixed.
	* tclconfig/*:  Updated TEA files to TEA 3.2
	* configure.in:
	* Makefile.in: 

2005-05-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/rules.vc: Applied patch 1092432 by westrick85 to handle
	paths with spaces better.

2005-04-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* demos/bug1158628.tcl: Demo file for this bug.
	* generic/udp_tcl.c: Applied a fix for bug #1158628 from Reinhard
	Max which avoids hanging Tcl while exiting with open channels.
	* configure.in:     Moved version to 1.0.7
	* win/makefile.vc: 

2004-11-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* demos/chat.tcl: Sample Tk chat app using multicast udp.

2004-11-22  Pat Thoyts  <patthoyts@users.sourceforge.net>
